--- a/leyou-common/pom.xml
+++ b/leyou-common/pom.xml
@@ -9,21 +9,9 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.leyou.item</groupId>
-    <artifactId>leyou-item</artifactId>
+    <groupId>com.leyou.common</groupId>
+    <artifactId>leyou-common</artifactId>
     <version>1.0.0-SNAPSHOT</version>
-    <modules>
-        <module>leyou-item-interface</module>
-        <module>leyou-item-service</module>
-    </modules>
-    <!-- 打包方式为pom -->
-    <packaging>pom</packaging>
-<dependencies>
-    <dependency>
-        <groupId>javax.persistence</groupId>
-        <artifactId>persistence-api</artifactId>
-        <version>1.0</version>
-    </dependency>
-</dependencies>
+
 
 </project>
