--- a/leyou-item/leyou-item-interface/pom.xml
+++ b/leyou-item/leyou-item-interface/pom.xml
@@ -12,6 +12,14 @@
     <groupId>com.leyou.item</groupId>
     <artifactId>leyou-item-interface</artifactId>
     <version>1.0.0-SNAPSHOT</version>
+    <dependencies>
+        <dependency>
+            <groupId>tk.mybatis</groupId>
+            <artifactId>mapper-base</artifactId>
+            <version>1.1.5</version>
+            <scope>compile</scope>
+        </dependency>
+    </dependencies>
 
 
 </project>
